--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.1",
     "serve-favicon": "~2.4.2"
   }
 }
