--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,22 +2,17 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "cogrammers-aws-dev",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "port": 5432,
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "cogrammers-aws-test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "port": 5432,
+    "dialect": "postgres"
   }
 }
