--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s3-app",
+  "name": "cogrammers-aws",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,10 +12,19 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "gulp": "^3.9.1",
     "morgan": "~1.8.1",
-    "pg": "^7.4.1",
+    "pg": "6",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.32.1",
+    "sequelize-cli": "^3.1.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "browser-sync": "2.9.6",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-nodemon": "^2.0.4",
+    "jshint-stylish": "^2.0.1"
   }
 }
