--- a/server/config.json
+++ b/server/config.json
@@ -1,12 +1,8 @@
 {
   "development": {
+    "username": "gndweber",
+    "password": null,
     "database": "cogrammers-aws-dev",
-    "host": "127.0.0.1",
-    "port": 5432,
-    "dialect": "postgres"
-  },
-  "test": {
-    "database": "cogrammers-aws-test",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
