--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "browser-sync": "2.9.6",
+    "sequelize": "^4.32.1",
+    "sequelize-cli": "^3.1.0",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "gulp-nodemon": "^2.0.4",
