--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('./server', 'config.json'),
+  'config': path.resolve('./server', 'config/db_config.json'),
   'migrations-path': path.resolve('./server', 'migrations'),
   'models-path': path.resolve('./server', 'models'),
   'seeders-path': path.resolve('./server', 'seeders')
