--- a/server/config/db_config.json
+++ b/server/config/db_config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "gndweber",
-    "password": null,
+    "password": "root",
     "database": "cogrammers-aws-dev",
     "host": "127.0.0.1",
     "port": 5432,
